--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ body {
     cursor: pointer;
     font-size: 22pt;
 }
+
+/* https://css-tricks.com/snippets/css/drop-caps/ */
+.first-letter {
+    color: #903;
+    float: left;
+    font-family: Georgia;
+    font-size: 75px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+  }
+
